remplissage page dev + debut lien dl

--- a/dev.html
+++ b/dev.html
@@ -25,33 +25,9 @@
       <li>
         <span></span>
         <div>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
-        </div>
-        <span class="number">
-          <span></span>
-          <span></span>
-        </span>
-      </li>
-      <li>
-        <div>
-          <span></span>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
-        </div>
-        <span class="number">
-          <span></span>
-          <span></span>
-        </span>
-      </li>
-      <li>
-        <div>
-          <span></span>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
+          <div class="title">Création du site</div>
+          <div class="info">Création du site internet et de toutes ses pages</div>
+          <div class="type"></div>
         </div>
         <span class="number">
           <span></span>
@@ -61,9 +37,33 @@
       <li>
         <span></span>
         <div>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
+          <div class="title">Création map</div>
+          <div class="info">Création de la première carte isométrique puis passage à la seconde en 2D</div>
+          <div class="type"></div>
+        </div>
+        <span class="number">
+          <span></span>
+          <span></span>
+        </span>
+      </li>
+      <li>
+        <div>
+          <span></span>
+          <div class="title">Deplacement et Quêtes</div>
+          <div class="info">Implémentation des déplacements au clic puis passage à des déplacements au clavier ainsi que ajout du système de quêtes </div>
+          <div class="type"></div>
+        </div>
+        <span class="number">
+          <span></span>
+          <span></span>
+        </span>
+      </li>
+      <li>
+        <div>
+          <span></span>
+          <div class="title">Ajout multi-joueurs</div>
+          <div class="info">Mise en place de mirror et du multi-joueurs avec une synchronisation des déplacements et un suivi de la caméra</div>
+          <div class="type"></div>
         </div>
         <span class="number">
           <span></span>
@@ -73,9 +73,9 @@
       <li>
         <span></span>
         <div>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
+          <div class="title">Combat et récompenses</div>
+          <div class="info">Mise en place d'un système de combat et d'un système de récompense après ces derniers (experience etc...)</div>
+          <div class="type"></div>
         </div>
         <span class="number">
           <span></span>
@@ -85,9 +85,9 @@
       <li>
         <span></span>
         <div>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
+          <div class="title">Nouvelles fonctionnalités multi-joueurs</div>
+          <div class="info">Ajout de nouvelles fonctionnalités multi-joueurs et fix des bugs liés au multi. Les bons skins sont désormais affichés et un système de groupe est implémenté</div>
+          <div class="type"></div>
         </div>
         <span class="number">
           <span></span>
@@ -97,15 +97,16 @@
       <li>
         <span></span>
         <div>
-          <div class="title">t</div>
-          <div class="info">test</div>
-          <div class="type">t</div>
+          <div class="title">Mise en ligne</div>
+          <div class="info">Mise en ligne du site, création d'un serveur pour jouer véritablement en multi-joueurs et mise en place d'un launcher permettant de télécharger le jeu et d'avoir accès au mises à jour</div>
+          <div class="type"></div>
         </div>
         <span class="number">
           <span></span>
           <span></span>
         </span>
       </li>
+      
       
     </ul>
   </div>
