--- a/download.html
+++ b/download.html
@@ -20,13 +20,13 @@
     <div id = "dljeu">
         <h3>Jeu</h3>
         <p>Cliquez sur Download pour télécharger gumber</p>
-        <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Download</a></div>
+        <div id="container"><a href="https://dl.patchkit.net/d/7dqap8jdp27n8qorkrrme/direct" target="_blank" id="link">Download</a></div>
     </div>
     <div id = "dldoc">
         <h3>Autres documents</h3>
         <p>Retrouvez ici les documents concernant le projet</p>
         <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Manuel d'installation</a></div>
-        <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Manuel d'utilisation</a></div>
+        <div id="container"><a href="manuel_util.docx" target="_blank" download="Manuel utilisation gumber" id="link">Manuel d'utilisation</a></div>
         <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Rapport du projet</a></div>
     </div>
 
