--- a/dev.html
+++ b/dev.html
@@ -73,8 +73,8 @@
       <li>
         <span></span>
         <div>
-          <div class="title">Combat et récompenses</div>
-          <div class="info">Mise en place d'un système de combat et d'un système de récompense après ces derniers (experience etc...)</div>
+          <div class="title">Combat, récompenses et IA</div>
+          <div class="info">Mise en place d'un système de combat et d'un système de récompense après ces derniers (experience etc...). De plus, mise en place d'une IA pour les monstres lors des combats</div>
           <div class="type"></div>
         </div>
         <span class="number">
