--- a/download.html
+++ b/download.html
@@ -25,9 +25,9 @@
     <div id = "dldoc">
         <h3>Autres documents</h3>
         <p>Retrouvez ici les documents concernant le projet</p>
-        <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Manuel d'installation</a></div>
-        <div id="container"><a href="manuel_util.docx" target="_blank" download="Manuel utilisation gumber" id="link">Manuel d'utilisation</a></div>
-        <div id="container"><a href="https://youtu.be/dQw4w9WgXcQ" target="_blank" id="link">Rapport du projet</a></div>
+        <div id="container"><a href="Manuel_dinstallation.pdf" target="_blank" download="Manuel installation gumber" id="link">Manuel d'installation</a></div>
+        <div id="container"><a href="manuelutil.pdf" target="_blank" download="Manuel utilisation gumber" id="link">Manuel d'utilisation</a></div>
+        <div id="container"><a href="rapportprojet.pdf" target="_blank" download="Rapport du projet" id="link">Rapport du projet</a></div>
     </div>
 
     <footer>
